Fixes #913 - Async JSON Parser.
Implemented non-blocking JSON parsing using Jetty's and Jackson's libraries.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>